skills cube2 shifted nav link for projects corrected

--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,7 @@ a {
 }
 
 .cube2 {
+  margin-top: 30px;
   margin-left: 30px;
 }
 
